@@ -7,6 +7,8 @@
 by calling the standard &c-lang; system facilities.
 The syntax of these &reg-exp;s is described in many places,
 such as your local &regex-h; manual and &emacs; info pages.</para>
+<simpara>When this module is present, &features-var; contains the
+ symbol <constant>:REGEXP</constant>.</simpara>
 
 <variablelist id="re-api"><title>API</title>
 <varlistentry id="re-match"><term><literal
